--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.14.0",
     "react-burger-menu": "^2.9.0",
     "react-dom": "^16.14.0",
+    "react-hook-form": "^6.9.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
