--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.3",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.14.0",
+    "react-alert": "^7.0.2",
     "react-burger-menu": "^2.9.0",
     "react-dom": "^16.14.0",
     "react-hook-form": "^6.9.4",
